--- a/About_AKO.html
+++ b/About_AKO.html
@@ -16,20 +16,23 @@
         <a href="./ListedLinks.html">Listed Links</a>
         <!-- <a href="./CustomQuickLinks.html">Custom Quick Links Setup</a> -->
         <a class="active">About AKOffline</a>
-		<!-- <a href="https://github.com/ArchaicBubba/ArmyKnowledgeOffline" style="float: right; padding: 3px;">
+		<a href="https://github.com/ArchaicBubba/ArmyKnowledgeOffline" style="float: right; padding: 3px;">
 			<img src="assets/github.png" style="height:30px; width:30px;">
-		</a> -->
+		</a>
     </nav>
   <div class="content" style="margin: 10px auto 60px;">
     <h2>About Army Knowledge Offline</h2>
     <p class="indent">Welcome to <i>Army Knowledge Offline (AKOffline)</i>! Your go to source for any Army link found on <i>Army Knowledge Online</i>. While <b>most</b> (not ALL) links on this website link to Official U.S. Army/Military/Government websites; it is not endorsed or maintained by the U.S. Army. Most official Army and U.S. Government websites are hosted on ".mil" and ".gov" domains. I am SGT Roman Antonacci, I develop, maintain, and run AKOffline. This site is very much a work in progress as there are an oddly large amount of army websites and will likely change within the coming future as a result. For further information or questions on this please feel free to email them to <a href="mailto:suggestions@armyknowledgeoffline.com">suggestions@armyknowledgeoffline.com</a> or find me on global. Please note while I do not respond to every email, I do read them. Always, thank you for supporting Army Knowledge Offline. 
-	<br><br></u></b>There are currently 165 Websites linked on AKOffline.</u></b>
+	<br><br></u></b>As an effort to keep the site as transparent as possible. A Link to the Github for the site is in the top left hand corner.</u></b>
 	<br><br>I will not add your website about Mesothelioma that target military veterans. Stop asking. Same with your online marketing emails. Yes, I am aware AKOffline has high bounce rate. That is kind of the point.</p>
-    <p class="indent"> 
     <hr>
-    
     <h2>Site Updates</h2>
-  <details open><summary><i>Mar-04-2022</i></summary>
+  <details open><summary><i>Apr-08-2022</i></summary>
+    <p class="indent">Modified <br> - All images site wise have been scaled down so that they are smaller and take up less bandwidth.<br> - Added GitHub Link on the About AKOffine page.</p><br>
+    <p class="indent">Added <br> - No JavaScript mode for browsers that can't us JavaScript</p><br>
+    <p class="indent">Removed <br> - removed all JQuery from the site as it was causing some issues for some users.</p>
+  </details><br>
+  <details><summary><i>Mar-04-2022</i></summary>
     <p class="indent">Modified <br> - Added a lot more comments in code. <br> - Changed "Army 365 Enterprise" to "Army 365 Teams"<br> - Changed AKO cards so they the images and titles are fully centered <br> - A lot of Styles for more consistency across the site.<br> - Navbar code has changed.</p><br>
     <p class="indent">Added <br> - Added the Daily Bugle to AKO Cards.<br> - Back end for custom quick links on AKO cards page.<br> - Added the following sites: "<u>Army 365 Azure Portal</u>", "<u>Army 365 Home</u>", "<u>Army 365 Infomation Hub</u>", "<u>Army Records Information Management System</u>", "<u>LandWarNet eUniveristy</u>", "<u>Military Child Care</u>", "<u>Protected Internet eXchange (PIX)</u>", <u>RAPIDS ID Card Office</u>, <u>Soldier For Life</u>, <u>Unit Commander's Finance Report (UCFR)</u>, <u>United Services Military Apprenticeship Program</u>, and <u>Yellow Ribbon Reintegration Program (YRRP)</u></p>
   </details><br>
@@ -62,7 +65,7 @@
   </div>
   
   <div class="disclaimer">
-    <span><i><b>DISCLAIMER!</b></i> This is a <u>Third Party Site</u>. While <b>most</b> (not ALL) links on this website link to Official U.S. Army/Military/Government websites; it is not endorsed or maintained by the U.S. Army. For more information please see the <a href="./About_AKO.html">About AKOffline</a>.<br>Found a missing/broken link or have any suggestions? Email them to <a href="mailto:suggestions@armyknowledgeoffline.com">suggestions@armyknowledgeoffline.com</a>!</span>
+    <span><i><b>DISCLAIMER!</b></i> This is a <u>Third Party Site</u>. While <b>most</b> (not ALL) links on this website link to Official U.S. Army/Military/Government websites; it is not endorsed or maintained by the U.S. Army.<br>Found a missing/broken link or have any suggestions? Email them to <a href="mailto:suggestions@armyknowledgeoffline.com">suggestions@armyknowledgeoffline.com</a>!</span>
   </div>
   
 </body>
