--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         </div>
     </nav>
     <div class="naviCentered">
-        <p id="dailyBugle" class="paperBoy"></p>
+        <p id="dailyBugle" class="paperBoy">No JavaScript Detected, All links A-Z displayed.</p>
     </div>
     <div style="margin: 10px auto 60px;">
         <div class="deck" style="max-width: 1920px; margin: auto;">
@@ -78,7 +78,7 @@
 
             <!-- All Web Sites A-Z -->
             <div style="display: block;" id="catAllSites">
-                <!-- A -->
+                <!-- A --> <div id="section-A"><br><hr><br></div>
                 <div class="column" id="A00">
                     <!-- Air Force Weather Agency - https://weather.af.mil/ -->
                     <a href="https://weather.af.mil/" rel="noopener noreferrer" class="column hideMarquee">
@@ -815,8 +815,8 @@
                         </div>
                     </a>
                 </div>
-                <!-- B -->
-                <!-- C -->
+                <!-- B <div id="section-B"><br><hr><br></div> -->
+                <!-- C --> <div id="section-C"><br><hr><br></div>
                 <div class="column" id="C00">
                     <!-- Career Acquisition Management Portal - https://apps.asc.army.mil/camp -->
                     <a href="https://apps.asc.army.mil/camp" rel="noopener noreferrer" class="column hideMarquee">
@@ -929,7 +929,7 @@
                         </div>
                     </a>
                 </div>
-                <!-- D -->
+                <!-- D --> <div id="section-D"><br><hr><br></div>
                 <div class="column" id="D00">
                     <!-- Defense Acquisition University - https://www.dau.mil/ -->
                     <a href="https://www.dau.mil/" rel="noopener noreferrer" class="column hideMarquee">
@@ -1218,7 +1218,7 @@
                         </div>
                     </a>
                 </div>
-                <!-- E -->
+                <!-- E --> <div id="section-E"><br><hr><br></div>
                 <div class="column" id="E00">
                     <!-- EagleCash - https://fiscal.treasury.gov/eaglecash/ -->
                     <a href="https://fiscal.treasury.gov/eaglecash/" rel="noopener noreferrer" class="column hideMarquee">
@@ -1299,7 +1299,7 @@
                         </div>
                     </a>
                 </div>
-                <!-- F -->
+                <!-- F --> <div id="section-F"><br><hr><br></div>
                 <div class="column" id="F00">
                     <!-- Federal Voting Assistance Program - https://www.fvap.gov/ -->
                     <a href="https://www.fvap.gov/" rel="noopener noreferrer" class="column hideMarquee">
@@ -1396,7 +1396,7 @@
                         </div>
                     </a>
                 </div>
-                <!-- G -->
+                <!-- G --> <div id="section-G"><br><hr><br></div>
                 <div class="column" id="G00">
                     <!-- GENERAL FUND ENTERPRISE BUSINESS SYSTEM - https://prodep.gfebs-erp.army.mil -->
                     <a href="https://prodep.gfebs-erp.army.mil" rel="noopener noreferrer" class="column hideMarquee">
@@ -1541,7 +1541,7 @@
                         </div>
                     </a>
                 </div>
-                <!-- H -->
+                <!-- H --> <div id="section-H"><br><hr><br></div>
                 <div class="column" id="H00">
                     <!-- Health.mil - https://health.mil/jmesi -->
                     <a href="https://health.mil/jmesi" rel="noopener noreferrer" class="column hideMarquee">
@@ -1558,7 +1558,7 @@
                         </div>
                     </a>
                 </div>
-                <!-- I -->
+                <!-- I --> <div id="section-I"><br><hr><br></div>
                 <div class="column" id="I00">
                     <!-- Identity, Credentialing and Access Management (ICAM) Portal - https://icamportal.us.army.mil -->
                     <a href="https://icamportal.us.army.mil" rel="noopener noreferrer" class="column hideMarquee">
@@ -1655,7 +1655,7 @@
                         </div>
                     </a>
                 </div>
-                <!-- J -->
+                <!-- J --> <div id="section-J"><br><hr><br></div>
                 <div class="column" id="J00">
                     <!-- JAG Corps - https://www.goarmy.com/jag.html -->
                     <a href="https://www.goarmy.com/jag.html" rel="noopener noreferrer" class="column hideMarquee">
@@ -1752,8 +1752,8 @@
                         </div>
                     </a>
                 </div>
-                <!-- K -->
-                <!-- L -->
+                <!-- K --> <div id="section-K"><br><hr><br></div>
+                <!-- L --> <div id="section-L"><br><hr><br></div>
                 <div class="column" id="L01">
                     <!-- LandWarNet eUniversity - https://lwn.army.mil -->
                     <a href="https://lwn.army.mil" rel="noopener noreferrer" class="column hideMarquee">
@@ -1770,7 +1770,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="column" id="L00">    
+                <div class="column" id="L00">
                     <!-- LHI Appointment Scheduling - https://lhi.care/start/ -->
                     <a href="https://lhi.care/start/" rel="noopener noreferrer" class="column hideMarquee">
                         <div class="armyCardContainer card">
@@ -1786,7 +1786,7 @@
                         </div>
                     </a>
                 </div>
-                <!-- M -->
+                <!-- M --> <div id="section-M"><br><hr><br></div>
                 <div class="column" id="M00">
                     <!-- Medical Operational Data System - https://www.mods.army.mil/ -->
                     <a href="https://www.mods.army.mil/" rel="noopener noreferrer" class="column hideMarquee">
@@ -2171,7 +2171,7 @@
                         </div>
                     </a>
                 </div>
-                <!-- N -->
+                <!-- N --> <div id="section-N"><br><hr><br></div>
                 <div class="column" id="N00">
                     <!-- NCO Leader Center for Excellence - http://ncolcoe.armylive.dodlive.mil/ -->
                     <a href="http://ncolcoe.armylive.dodlive.mil/" rel="noopener noreferrer" class="column hideMarquee">
@@ -2220,7 +2220,7 @@
                         </div>
                     </a>
                 </div>
-                <!-- O -->
+                <!-- O --> <div id="section-O"><br><hr><br></div>
                 <div class="column" id="O00">
                     <!-- Office of Personnel Management - https://www.opm.gov/ -->
                     <a href="https://www.opm.gov/" rel="noopener noreferrer" class="column hideMarquee">
@@ -2237,7 +2237,7 @@
                         </div>
                     </a>
                 </div>
-                <!-- P -->
+                <!-- P --> <div id="section-P"><br><hr><br></div>
                 <div class="column" id="P00">
                     <!-- Preventative Maintenance Monthly (P.S. Magazine) - https://www.psmagazine.army.mil/ -->
                     <a href="https://www.psmagazine.army.mil/" rel="noopener noreferrer" class="column hideMarquee">
@@ -2318,8 +2318,8 @@
                         </div>
                     </a>
                 </div>
-                <!-- Q -->
-                <!-- R -->
+                <!-- Q <div id="section-Q"><br><hr><br></div> -->
+                <!-- R --> <div id="section-R"><br><hr><br></div>
                 <div class="column" id="R01">
                     <!-- RAPIDS ID Card Office - https://idco.dmdc.osd.mil/idco/ -->
                     <a href="https://idco.dmdc.osd.mil/idco/" rel="noopener noreferrer" class="column hideMarquee">
@@ -2352,7 +2352,7 @@
                         </div>
                     </a>
                 </div>
-                <!-- S -->
+                <!-- S --> <div id="section-S"><br><hr><br></div>
                 <div class="column" id="S06">
                     <!-- S1Net - https://www.milsuite.mil/book/community/spaces/apf/s1net -->
                     <a href="https://www.milsuite.mil/book/community/spaces/apf/s1net" rel="noopener noreferrer" class="column hideMarquee">
@@ -2465,7 +2465,7 @@
                         </div>
                     </a>
                 </div>
-                <!-- T -->
+                <!-- T --> <div id="section-T"><br><hr><br></div>
 				<div class="column" id="S03">
                     <!-- Transition Assistance Program (TAP)- https://www.sfl-tap.army.mil/ -->
                     <a href="https://www.sfl-tap.army.mil/" rel="noopener noreferrer" class="column hideMarquee">
@@ -2594,7 +2594,7 @@
                         </div>
                     </a>
                 </div>
-                <!-- U -->
+                <!-- U --> <div id="section-U"><br><hr><br></div>
                 <div class="column" id="U00">
                     <!-- U.S. Armed Forces Legal Assistance - https://legalassistance.law.af.mil/ -->
                     <a href="https://legalassistance.law.af.mil/" rel="noopener noreferrer" class="column hideMarquee">
@@ -2643,7 +2643,7 @@
                         </div>
                     </a>
                 </div>
-                <!-- V -->
+                <!-- V --> <div id="section-V"><br><hr><br></div>
                 <div class="column" id="V00">
                     <!-- Visual Information Ordering Site - https://vios.army.mil/ -->
                     <a href="https://vios.army.mil/" rel="noopener noreferrer" class="column hideMarquee">
@@ -2676,9 +2676,9 @@
                         </div>
                     </a>
                 </div>
-                <!-- W -->
-                <!-- X -->
-                <!-- Y -->
+                <!-- W <div id="section-W"><br><hr><br></div> -->
+                <!-- X <div id="section-X"><br><hr><br></div> -->
+                <!-- Y --> <div id="section-Y"><br><hr><br></div>
                 <div class="column" id="Y00">
                     <!-- Yellow Ribbon Reintegration Program (YRRP) - https://www.yellowribbon.mil/ -->
                     <a href="https://www.yellowribbon.mil/" rel="noopener noreferrer" class="column hideMarquee">
@@ -2695,7 +2695,7 @@
                         </div>
                     </a>
                 </div>
-                <!-- Z -->
+                <!-- Z <div id="section-"><br><hr><br></div> -->
             </div>
 
             <!-- Army Web Sites -->
