--- a/ListedLinks.html
+++ b/ListedLinks.html
@@ -415,7 +415,7 @@
 		    <p>Global Combat Support System - Army (GCSS-Army) is one program with two components. The first component, GCSS-Army Enterprise Resource Planning (ERP) Solution, is an automated information system that serves as the primary tactical logistics enabler supporting Army and joint transformation for sustainment. The program re-engineers current business processes to achieve end-to-end logistics and integration with applicable command and control (C2) and joint systems. <br>The second component, Army Enterprise Systems Integration Program (AESIP), integrates Army business functions by providing a single source for enterprise hub services, master data and business intelligence. GCSS-Army uses Commercial Off-The-Shelf ERP software products to support rapid force projection in the battlefield functional areas of arming, fixing, fueling, sustaining and tactical logistics financial processes.</p>
 		</details>
 	    <details class="noSpacing"><!-- Global Electronic Approval Routing System (GEARS Purple) - https://army.deps.mil/netcom/sites/GEARS/Live --> 
-		  <summary>• <a href="">Global Electronic Approval Routing System (GEARS Purple) - https://army.deps.mil/netcom/sites/GEARS/Live</a></summary>
+		  <summary>• <a href="https://army.deps.mil/netcom/sites/GEARS/Live">Global Electronic Approval Routing System (GEARS Purple) - https://army.deps.mil/netcom/sites/GEARS/Live</a></summary>
 		    <p>GEARS is an automated packet/document routing and tracking system built on SharePoint that implements global management of business processes.</p>
 		</details>
 	    <details class="noSpacing"><!-- Global Electronic Approval Routing System 5 (GEARS Yellow) - https://army.deps.mil/netcom/sites/GEARS5/Live --> 
