--- a/About_AKO.html
+++ b/About_AKO.html
@@ -23,7 +23,7 @@
   <div class="content" style="margin: 10px auto 60px;">
     <h2>About Army Knowledge Offline</h2>
     <p class="indent">Welcome to <i>Army Knowledge Offline (AKOffline)</i>! Your go to source for any Army link found on <i>Army Knowledge Online</i>. While <b>most</b> (not ALL) links on this website link to Official U.S. Army/Military/Government websites; it is not endorsed or maintained by the U.S. Army. Most official Army and U.S. Government websites are hosted on ".mil" and ".gov" domains. I am SGT Roman Antonacci, I develop, maintain, and run AKOffline. This site is very much a work in progress as there are an oddly large amount of army websites and will likely change within the coming future as a result. For further information or questions on this please feel free to email them to <a href="mailto:suggestions@armyknowledgeoffline.com">suggestions@armyknowledgeoffline.com</a> or find me on global. Please note while I do not respond to every email, I do read them. Always, thank you for supporting Army Knowledge Offline. 
-	<br><br></u></b>As an effort to keep the site as transparent as possible. A Link to the Github for the site is in the top left hand corner.</u></b>
+	<br><br></u></b>As an effort to keep the site as transparent as possible. A link to the Github for the site is in the top right hand corner.</u></b>
 	<br><br>I will not add your website about Mesothelioma that target military veterans. Stop asking. Same with your online marketing emails. Yes, I am aware AKOffline has high bounce rate. That is kind of the point.</p>
     <hr>
     <h2>Site Updates</h2>
