--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
             <!-- All Web Sites A-Z -->
             <div style="display: block;" id="catAllSites">
-                <!-- A --> <div id="section-A"><br><hr><br></div>
+                <!-- A --> <div id="section-A"></div>
                 <div class="column" id="A00">
                     <!-- Air Force Weather Agency - https://weather.af.mil/ -->
                     <a href="https://weather.af.mil/" rel="noopener noreferrer" class="column hideMarquee">
