--- a/ListedLinks.html
+++ b/ListedLinks.html
@@ -55,6 +55,10 @@
 		  <summary>• <a href="https://weather.af.mil/" rel="noopener noreferrer">Air Force Weather Agency - https://weather.af.mil/</a></summary>
 		    <p>Air Force Weather Agency is the weather presented by the Air Force.</p>
 		</details>
+        <details class="noSpacing"> <!-- Aircraft and Personnel Automated Clearance System (APACS) - https://apacs.milcloud.mil/apacs/login.jsp -->
+		  <summary>• <a href="https://apacs.milcloud.mil/apacs/login.jsp" rel="noopener noreferrer">Aircraft and Personnel Automated Clearance System (APACS) - https://apacs.milcloud.mil/apacs/login.jsp</a></summary>
+		    <p>Aircraft and Personnel Automated Clearance System (APACS) is a web-based application designed to aid DoD mission planners, aircraft operators and DoD personnel in meeting host nation aircraft diplomatic and personnel travel clearance requirements outlined in the DoD Foreign Clearance Guide.</p>
+		</details>
         <details class="noSpacing"> <!-- AMEDD Command Management System - https://cms.mods.army.mil/cms/ --> 
 		  <summary>• <a href="https://cms.mods.army.mil/cms/" rel="noopener noreferrer">AMEDD Command Management System - https://cms.mods.army.mil/cms/</a><red> !Only Works on DoD Networks!</red></summary>
 		    <p>The Command Management System now hosts tri-service metrics gathered from various MHS and service-specific systems Carepoint, TOC, CARA, MRRS, and DMHRSi to name a few – empowering users to compare location performance, report trending, leverage customizable charting, create formatted reports, and tailor the site with favorites in a highly available, DIACAP-approved, load balanced cluster at the Pentagon as part of the MODS system</p>
@@ -129,6 +133,10 @@
         <details class="noSpacing"><!-- Army Email (@mail.mil) - https://web.mail.mil --> 
 		  <summary>• <a href="https://web.mail.mil" rel="noopener noreferrer">Army Email (@mail.mil) - https://web.mail.mil</a></summary>
 		    <p>Provides access to the Army's web mail portal for "mail.mil" web address.</p>
+		</details>
+        <details class="noSpacing"> <!-- Army Emergency Relief (AER) - https://www.armyemergencyrelief.org/ -->
+		  <summary>• <a href="https://www.armyemergencyrelief.org/" rel="noopener noreferrer">Army Emergency Relief (AER) - https://www.armyemergencyrelief.org/</a></summary>
+		    <p>Army Emergency Relief (AER) is a private, nonprofit organization that was created to help Soldiers and their Family members who experience financial emergencies. AER provides funds to help Soldiers with immediate financial needs with rent, utilities, emergency travel, etc. You can find information or donate to them here.</p>
 		</details>
 		<details class="noSpacing"><!-- Army Enterprise Service Desk (AESD) - https://snpro.aesd-w.army.mil/ --> 
 		  <summary>• <a href="https://snpro.aesd-w.army.mil/">Army Enterprise Service Desk (AESD) - https://snpro.aesd-w.army.mil/</a></summary>
@@ -282,6 +290,10 @@
 		  <summary>• <a href="https://compo.dcpds.cpms.osd.mil/" rel="noopener noreferrer">Defense Civilian Personnel Data System - https://www.dcpas.osd.mil/</a></summary>
 		    <p>The Defense Civilian Personnel Advisory Service is a multifunction, web-based civilian HR information management and transaction processing system. The core DCPDS system (based on the Oracle HR custom of the-shelf solution (COTS) product), is customized for Defense environments, and provides personnel transaction processing using Oracle Federal HR for appropriated fund, non-appropriated fund, local national and National Guard employees.</p>
 		</details>
+        <details class="noSpacing"> <!-- Defense Civilian Intelligence Personnel System (DCIPS) - https://dcips.defense.gov/ -->
+		  <summary>• <a href="https://dcips.defense.gov/" rel="noopener noreferrer">Defense Civilian Intelligence Personnel System (DCIPS) - https://dcips.defense.gov/</a></summary>
+		    <p>The Defense Civilian Intelligence Personnel System (DCIPS) incorporates all DoD intelligence positions under a single, performance-based, mission-focused personnel management system. DCIPS serves as the common Defense Intelligence Enterprise system that helps to attract, retain, and reward the workforce needed to successfully carry out critical national security missions.</p>
+		</details>
         <details class="noSpacing"><!-- Defense Enrollment Eligibility Readiness - https://www.tricare.mil/DEERS/ --> 
 		  <summary>• <a href="https://www.tricare.mil/DEERS/" rel="noopener noreferrer">Defense Enrollment Eligibility Readiness - https://www.tricare.mil/DEERS/</a></summary>
 		    <p>Defense Enrollment Eligibility Reporting System (DEERS) is a computerized database for United States Service members, military retirees, 100% VA Disabled Veterans, dependents, DoD active Contractors, and others worldwide who are entitled to Public Key Infrastructure and TRICARE eligibility.</p>
@@ -334,9 +346,21 @@
 		  <summary>• <a href="https://ataaps.csd.disa.mil/" rel="noopener noreferrer">DoD Automated Time Attendance and Production System - https://ataaps.csd.disa.mil/</a></summary>
 		    <p>The Automated Time Attendance and Production System (ATAAPS) is used by civilian employees to accurately record time and attendance (e.g. leave, overtime, compensatory time off, wellness), while capturing labor hours by job order.</p>
 		</details>
-        <details class="noSpacing"><!-- DOD CAC Reference Center - http://www.cac.mil/ --> 
+        <details class="noSpacing"> <!-- DoD CAC Cert Repository - https://public.cyber.mil/pki-pke/tools-configuration-files/ -->
+		  <summary>• <a href="https://public.cyber.mil/pki-pke/tools-configuration-files/" rel="noopener noreferrer">DOD CAC Cert Repository - https://public.cyber.mil/pki-pke/tools-configuration-files/</a></summary>
+		    <p>The DOD Commmon Access Card Cert repository. Use the certs her to gain access to DOD websites with your common access card. Choose the correct one for your Operating System.</p>
+		</details>
+        <details class="noSpacing"><!-- DoD CAC Reference Center - http://www.cac.mil/ --> 
 		  <summary>• <a href="http://www.cac.mil/" rel="noopener noreferrer">DOD CAC Reference Center - http://www.cac.mil/</a></summary>
 		    <p>DoD ID Card Reference Center</p>
+		</details>
+        <details class="noSpacing"> <!-- DoD Cyber Exchange (NIPR) - https://cyber.mil/ -->
+		  <summary>• <a href="https://cyber.mil/" rel="noopener noreferrer">DoD Cyber Exchange (NIPR) - https://cyber.mil/</a></summary>
+		    <p>The DoD Cyber Exchange provides one-stop access to cyber information, policy, guidance and training for cyber professionals throughout the DoD, and the general public. These resources are provided to enable the user to comply with rules, regulations, best practices and federal laws. DISA is mandated to support and sustain the DoD Cyber Exchange (formerly the Information Assurance Support Environment (IASE)) as directed by DoDI 8500.01 and DODD 8140.01. Use this if you have CAC access.</p>
+		</details>
+        <details class="noSpacing"> <!-- DoD Cyber Exchange (Public) - https://public.cyber.mil/ -->
+		  <summary>• <a href="https://public.cyber.mil/" rel="noopener noreferrer">DoD Cyber Exchange (public) - https://public.cyber.mil/</a></summary>
+		    <p>The DoD Cyber Exchange provides one-stop access to cyber information, policy, guidance and training for cyber professionals throughout the DoD, and the general public. These resources are provided to enable the user to comply with rules, regulations, best practices and federal laws. DISA is mandated to support and sustain the DoD Cyber Exchange (formerly the Information Assurance Support Environment (IASE)) as directed by DoDI 8500.01 and DODD 8140.01. Use this if you do not have CAC access.</p>
 		</details>
         <details class="noSpacing"><!-- DOD MWR Libraries Overdrive - https://dod.overdrive.com/dod-armymwr/content --> 
 		  <summary>• <a href="https://dod.overdrive.com/dod-armymwr/content" rel="noopener noreferrer">DOD MWR Libraries Overdrive - https://dod.overdrive.com/dod-armymwr/content</a></summary>
@@ -442,8 +466,8 @@
     </details><hr>
     <!-- Sites that begin with H --> <details open class="spacing" id="section-H"><summary><b>-H-</b></summary>
       <p>
-        <details class="noSpacing"><!-- Health.mil - https://health.mil/jmesi --> 
-		  <summary>• <a href="https://health.mil/jmesi" rel="noopener noreferrer">Health.mil - https://health.mil/jmesi</a></summary>
+        <details class="noSpacing"><!-- Health.mil - https://health.mil/ --> 
+		  <summary>• <a href="https://health.mil/" rel="noopener noreferrer">Health.mil - https://health.mil/</a></summary>
 		    <p>The Military Health System (MHS) is a form of nationalized health care operated within the United States Department of Defense that provides health care to active duty, Reserve component and retired U.S. Military personnel and their dependents.</p>
 		</details>
       </p>
@@ -574,6 +598,10 @@
 		  <summary>• <a href="https://www.atis.army.mil/MDTF.html" rel="noopener noreferrer">Mobile Digital Training Facility (MDTF) - https://www.atis.army.mil/MDTF.html</a></summary>
 		    <p>The Mobile Digital Training Facility (MDTF) is a wireless networked classroom of 10 notebook PCs designed to be connected to the unit's local wireless network for use wherever and whenever access to distributed learning is needed.  It will deliver individual and collective training to Soldiers and DA Civilians anywhere and anytime.</p>
 		</details>
+        <details class="noSpacing"> <!-- Move.Mil - https://my.move.mil/ -->
+		  <summary>• <a href="https://my.move.mil/" rel="noopener noreferrer">Move.Mil - https://my.move.mil/</a></summary>
+		    <p>This is a new system from USTRANSCOM to support the relocation of families during PCS. Right now, use of this system is by invitation only.</p>
+		</details>
         <details class="noSpacing"><!-- myPay - https://mypay.dfas.mil/mypay.aspx --> 
 		  <summary>• <a href="https://mypay.dfas.mil/mypay.aspx" rel="noopener noreferrer">myPay - https://mypay.dfas.mil/mypay.aspx</a></summary>
 		    <p>The Defense Department's online payroll and accounting system, providing access to view one's pay account, view travel claims, make changes to withholding and allotments, and chance Thrift Savings Plan contributions.</p>
@@ -646,6 +674,10 @@
     </details><hr>
     <!-- Sites that begin with P --> <details open class="spacing" id="section-P"><summary><b>-P-</b></summary>
       <p>
+        <details class="noSpacing"> <!-- Patient Portal Tricare Online - https://www.tricareonline.com/ -->
+		  <summary>• <a href="https://www.tricareonline.com/" rel="noopener noreferrer">Patient Portal Tricare Online - https://www.tricareonline.com/</a></summary>
+		    <p>Patient Portal Tricare Online is a part of the MHS GENESIS (MHSG) system. MHSG is the new electronic health record for the Military Health System (MHS) and provides enhanced, secure technology to manage your health information. MHSG integrates inpatient and outpatient solutions that will connect medical and dental information across the continuum of care, from point of injury to the military treatment facility.</p>
+		</details>
 		<details class="noSpacing"><!-- Preventative Maintenance Monthly (P.S. Magazine) - https://www.psmagazine.army.mil/ --> 
 		  <summary>• <a href="https://www.psmagazine.army.mil/" rel="noopener noreferrer">Preventative Maintenance Monthly (P.S. Magazine) - https://www.psmagazine.army.mil/</a></summary>
 		    <p>Preventative Maintenance Monthly is intended to enhance materiel readiness by emphasizing preventive maintenance and promoting proper maintenance and supply procedures. Review of PS Magazine will be a regular part of unit readiness initiatives. A reader service is available to answer maintenance and supply questions.</p>
@@ -807,7 +839,7 @@
   </div>
   <br>
   <div class="disclaimer">
-    <span><i><b>DISCLAIMER!</b></i> This is a <u>Third Party Site</u>. While <b>most</b> (not ALL) links on this website link to Official U.S. Army/Military/Government websites; it is not endorsed or maintained by the U.S. Army. For more information please see the <a href="./About_AKO.html">About AKOffline</a>.<br>Found a missing/broken link or have any suggestions? Email them to <a href="mailto:suggestions@armyknowledgeoffline.com">suggestions@armyknowledgeoffline.com</a>!</span>
+    <span><i><b>DISCLAIMER!</b></i> This is a <u>Third Party Site</u>. While <b>most</b> (not ALL) links on this website link to Official U.S. Army/Military/Government websites; it is not endorsed or maintained by the U.S. Army. For more information please see the <a href="./About_AKO.html">About AKOffline</a>.<br>Found a missing/broken link or have any suggestions? <a href="https://github.com/ArchaicBubba/ArmyKnowledgeOffline/issues">Report it HERE</a>!</span>
   </div>
 </body>
 
