--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                         <div class="armyCardContainer card">
                             <div class="armyCard">
                                 <div>
-                                    <img src="assets/Card-000.gif" class="cardImage" loading="lazy">
+                                    <img src="assets/Card-150.jpg" class="cardImage" loading="lazy">
                                     <p class="marquee"><br><br>Aircraft and Personnel Automated Clearance System (APACS) is a web-based application designed to aid DoD mission planners, aircraft operators and DoD personnel in meeting host nation aircraft diplomatic and personnel travel clearance requirements outlined in the DoD Foreign Clearance Guide.</p>
                                 </div>
                                 <div class="title">
@@ -421,7 +421,7 @@
                         <div class="armyCardContainer card">
                             <div class="armyCard">
                                 <div>
-                                    <img src="assets/Card-000.gif" class="cardImage" loading="lazy">
+                                    <img src="assets/Card-146.jpg" class="cardImage" loading="lazy">
                                     <p class="marquee"><br><br>Army Emergency Relief (AER) is a private, nonprofit organization that was created to help Soldiers and their Family members who experience financial emergencies. AER provides funds to help Soldiers with immediate financial needs with rent, utilities, emergency travel, etc. You can find information or donate to them here.</p>
                                 </div>
                                 <div class="title">
@@ -984,7 +984,7 @@
                         <div class="armyCardContainer card">
                             <div class="armyCard">
                                 <div>
-                                    <img src="assets/Card-000.gif" class="cardImage" loading="lazy">
+                                    <img src="assets/Card-147.jpg" class="cardImage" loading="lazy">
                                     <p class="marquee"><br><br>The Defense Civilian Intelligence Personnel System (DCIPS) incorporates all DoD intelligence positions under a single, performance-based, mission-focused personnel management system. DCIPS serves as the common Defense Intelligence Enterprise system that helps to attract, retain, and reward the workforce needed to successfully carry out critical national security missions.</p>
                                 </div>
                                 <div class="title">
@@ -1240,7 +1240,7 @@
                         <div class="armyCardContainer card">
                             <div class="armyCard">
                                 <div>
-                                    <img src="assets/Card-000.gif" class="cardImage" loading="lazy">
+                                    <img src="assets/Card-145.jpg" class="cardImage" loading="lazy">
                                     <p class="marquee"><br><br>The DOD Commmon Access Card Cert repository. Use the certs her to gain access to DOD websites with your common access card. Choose the correct one for your Operating System.</p>
                                 </div>
                                 <div class="title">
@@ -1256,7 +1256,7 @@
                         <div class="armyCardContainer card">
                             <div class="armyCard">
                                 <div>
-                                    <img src="assets/Card-000.gif" class="cardImage" loading="lazy">
+                                    <img src="assets/Card-144.jpg" class="cardImage" loading="lazy">
                                     <p class="marquee"><br><br>The DoD Cyber Exchange provides one-stop access to cyber information, policy, guidance and training for cyber professionals throughout the DoD, and the general public. These resources are provided to enable the user to comply with rules, regulations, best practices and federal laws. DISA is mandated to support and sustain the DoD Cyber Exchange (formerly the Information Assurance Support Environment (IASE)) as directed by DoDI 8500.01 and DODD 8140.01. Use this if you have CAC access.</p>
                                 </div>
                                 <div class="title">
@@ -1272,7 +1272,7 @@
                         <div class="armyCardContainer card">
                             <div class="armyCard">
                                 <div>
-                                    <img src="assets/Card-000.gif" class="cardImage" loading="lazy">
+                                    <img src="assets/Card-145.jpg" class="cardImage" loading="lazy">
                                     <p class="marquee"><br><br>The DoD Cyber Exchange provides one-stop access to cyber information, policy, guidance and training for cyber professionals throughout the DoD, and the general public. These resources are provided to enable the user to comply with rules, regulations, best practices and federal laws. DISA is mandated to support and sustain the DoD Cyber Exchange (formerly the Information Assurance Support Environment (IASE)) as directed by DoDI 8500.01 and DODD 8140.01. Use this if you do not have CAC access.</p>
                                 </div>
                                 <div class="title">
@@ -2098,7 +2098,7 @@
                         <div class="armyCardContainer card">
                             <div class="armyCard">
                                 <div>
-                                    <img src="assets/Card-000.gif" class="cardImage" loading="lazy">
+                                    <img src="assets/Card-149.png" class="cardImage" loading="lazy">
                                     <p class="marquee"><br><br>This is a new system from USTRANSCOM to support the relocation of families during PCS. Right now, use of this system is by invitation only. </p>
                                 </div>
                                 <div class="title">
@@ -2357,7 +2357,7 @@
                         <div class="armyCardContainer card">
                             <div class="armyCard">
                                 <div>
-                                    <img src="assets/Card-000.gif" class="cardImage" loading="lazy">
+                                    <img src="assets/Card-148.png" class="cardImage" loading="lazy">
                                     <p class="marquee"><br><br>Patient Portal Tricare Online is a part of the MHS GENESIS (MHSG) system. MHSG is the new electronic health record for the Military Health System (MHS) and provides enhanced, secure technology to manage your health information. MHSG integrates inpatient and outpatient solutions that will connect medical and dental information across the continuum of care, from point of injury to the military treatment facility.</p>
                                 </div>
                                 <div class="title">
